deployment/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{service}#
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    app: #{project-name}#
    pod: #{service}#-pod
  ports:
    - name: #{service-protocol-min}#
      targetPort: #{container-port}#
      port: #{port-number}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{service}#-deployment
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: #{service}#-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: #{project-name}#
        pod: #{service}#-pod
        app.bancolombia.com.co/project: #{project-name}#
        version: version.#{version}#
    spec:
      serviceAccountName: #{service-account-name}#
      containers:
        - name: #{service}#-container
          image: #{image}#
          ports:
            - containerPort: #{container-port}#
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              pod: #{service}#-pod
