deployment/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: #{service}#-gateway
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: #{port-number}#
        name: #{service-protocol-min}#
        protocol: #{service-protocol}#
      hosts:
        - http://mystorage.com/

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: #{service}#-vs
  namespace: #{namespace}#
  labels:
    app.bancolombia.com.co/env: #{env}#
    app.bancolombia.com.co/cost-center: #{cost-center}#
    app.bancolombia.com.co/application-code: #{application-code}#
    app.bancolombia.com.co/project: #{project-name}#
    app.bancolombia.com.co/pmo: #{pmo}#
spec:
  hosts:
    - http://mystorage.com/
  gateways:
    - #{service}#-gateway
  http:
    - match:
        - uri:
            prefix: '/storage/client-and-products/api/'
      rewrite:
        uri: '/api/storage/api'
      route:
        - destination:
            host: #{service}#
            port:
              number: #{port-number}#
